# projectA

./: .gitignore  pyrightconfig.json
backend/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_rag_schema.py  0003_customer_support_agent_log_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: compat.py  deps.py  router.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  pagination.py  security.py
backend/app/rag/: bootstrap.py  main.py
backend/doc/: 01-auth-module.md  02-conversations-module.md  03-customers-module.md  04-team-module.md  05-knowledge-module.md  06-backend-architecture.md  06-webhooks-module.md  07-directory-structure.md  07-settings-module.md  08-channels-module.md  09-automation-module.md  10-rag-integration-plan.md  INDEX.md  Python数据库表结构说明.md  TS与Python API对照清单.md  TS与Python逐表差异清单.md  TS原始API清单.md  TS数据库表结构说明.md  后端全面复刻差距清单.md  后端数据库表结构与关系说明.md  后端队列异步任务缓存说明.md  模块API总览.md
backend/doc/modules/: 01-auth.md  02-admin.md  03-settings.md  04-customers.md  05-conversations.md  06-customer-support-agent.md  07-tickets-team.md  08-knowledge.md  09-ai-workspace.md  10-automation.md  11-channels.md  12-operations.md  13-webhooks.md  14-campaigns-flows.md  15-tokens.md  16-analytics-activity-export-realtime.md  17-gdpr.md  18-rag.md  README.md
backend/extern_agent/: __init__.py  config.py
backend/tests/: conftest.py  test_api_contracts.py  test_customer_support_prompt_builder.py
(+320 files in other folders)
